Added updatePlaylist API
Minor changes on updatePost and added updatePlaylist API
